# dlt

./: README.md  pyproject.toml
lyrics_transcribe/: cli.py  format.py  separate.py  transcribe.py
